# content-reshaper

./: .gitignore  Makefile  README.md  pyproject.toml  reshaper.py
prompts/: blog_post.py  email_newsletter.py  linkedin_post.py  summary.py  twitter_thread.py
tests/: test_build_markdown.py  test_extract_video_id.py  test_fetch_transcript.py  test_generate.py
